*timeline-1.3.0 (02 Jul 2014)

  02 Jul 2014; Poncho <poncho@spahan.ch> +timeline-1.3.0.ebuild,
  -timeline-1.0.1-r1.ebuild:
  x11-misc/timeline: version bump

*timeline-1.2.4 (08 Apr 2014)

  08 Apr 2014; Poncho <poncho@spahan.ch> +metadata.xml, +timeline-1.2.4.ebuild,
  -timeline-1.1.0.ebuild, timeline-1.0.1-r1.ebuild:
  x11-misc/timeline: version bump, drop x86 keyword