@@ -1,3 +1,8 @@
+*timeline-1.3.0-r1 (10 Jul 2014)
+
+  10 Jul 2014; Poncho <poncho@spahan.ch> +timeline-1.3.0-r1.ebuild:
+  x11-misc/timeline: remove useflags
+
 *timeline-1.3.0 (02 Jul 2014)
 
   02 Jul 2014; Poncho <poncho@spahan.ch> +timeline-1.3.0.ebuild,
